--- a/snippets/package.json
+++ b/snippets/package.json
@@ -7,7 +7,13 @@
 					"hcl"
 				],
 				"path": "./nomad.json"
-			}
+			},
+            {
+                "language": [
+                    "markdown"
+                ],
+                "path": "./astro.json"
+            }
 		]
 	}
 }
