chore: add snippet for PF rulesets

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -13,6 +13,12 @@
                     "markdown"
                 ],
                 "path": "./astro.json"
+            },
+            {
+                "language": [
+                    "yaml"
+                ],
+                "path": "./pf.json"
             }
 		]
 	}
