chore(snippets): add Terraform snippets
Add Terraform snippets from [hashicorp/vscode-terraform](https://github.com/hashicorp/vscode-terraform)

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -19,6 +19,12 @@
                     "yaml"
                 ],
                 "path": "./pf.json"
+            },
+            {
+                "language": [
+                    "terraform"
+                ],
+                "path": "./terraform.json"
             }
 		]
 	}
