refactor(snippets): use astro paper snippet

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -12,7 +12,7 @@
                 "language": [
                     "markdown"
                 ],
-                "path": "./astro.json"
+                "path": "./astro-paper.code-snippets"
             },
             {
                 "language": [
